--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=coopera-voto
+
+# Configuração do PostgreSQL
+spring.datasource.url=jdbc:postgresql://postgres:5432/coopera_db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+security.basic.enabled=false
+
+# Configuração do Kafka
+spring.kafka.bootstrap-servers=kafka:9092
+spring.kafka.consumer.group-id=coopera-group
+
+# Porta da aplicação
+server.port=8080
+
+# Configuração do OpenAPI (Swagger)
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
